# sgx_distaff

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/crypto/: hash.rs  merkle.rs  mod.rs
src/examples/: collatz.rs  comparison.rs  conditional.rs  fibonacci.rs  merkle.rs  mod.rs  range.rs  utils.rs
src/math/: fft.rs  field.rs  mod.rs  parallel.rs  polynom.rs  quartic.rs
src/processor/: mod.rs  opcodes.rs
src/processor/decoder/: mod.rs
src/processor/stack/: mod.rs
src/processor/stack/tests/: mod.rs
src/programs/: hashing.rs  inputs.rs  mod.rs
src/programs/assembly/: errors.rs  mod.rs  parsers.rs  tests.rs
src/programs/blocks/: mod.rs  tests.rs
src/programs/tests/: mod.rs  utils.rs
src/stark/: proof.rs  prover.rs  verifier.rs
src/stark/constraints/: constraint_poly.rs  constraint_table.rs  evaluator.rs  utils.rs
src/stark/constraints/decoder/: mod.rs  op_bits.rs  sponge.rs  tests.rs
src/stark/constraints/stack/: arithmetic.rs  hash.rs  mod.rs
src/stark/fri/: mod.rs  prover.rs  utils.rs  verifier.rs
src/stark/trace/: trace_state.rs  trace_table.rs
src/stark/utils/: coefficients.rs  mod.rs  proof_of_work.rs
src/tests/: comparisons.rs
src/utils/: hasher.rs  mod.rs
