[package]
name = "distaff"
version = "0.5.1"
authors = ["Bobbin Threadbare <bobbinth@protonmail.com>"]
edition = "2018"
description="Zero-knowledge virtual machine written in Rust"
readme="https://github.com/GuildOfWeavers/distaff/blob/master/README.md"
repository = "https://github.com/GuildOfWeavers/distaff"
license = "MIT"

[lib]
name = "distaff"
path = "src/lib.rs"

[dependencies]
tiny-keccak = { version = "2.0", features = ["sha3"] }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_time"] }
serde = { git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"] }
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx"}
hex = { git = "https://github.com/mesalock-linux/rust-hex-sgx"}
rand = { git = "https://github.com/mesalock-linux/rand-sgx"}
log = { git="https://github.com/mesalock-linux/log-sgx"}
env_logger = {git="https://github.com/mesalock-linux/env_logger-sgx"}
